tests/semantic/fail/record-6.tiger
let
	type a = {a : int, b : int}
	var a := a {b = 0, a = 0}
in
end
